# postgres-cli

./: .gitignore  README.md  extract_info.py  pyproject.toml  requirements.txt  upload_label_data_sqlalchemy.py  url_finder.py
Helper/: compare_label_file_versions.py  compare_versions.py  create_ortho_bounding_dict.py  fetch_data_with_queries.py
Utils/: compare_label_file_bboxes.py  compare_label_file_versions.py  delete_existed_labels.py  fetch_data_with_queries.py  find_corresponding_ortho_for_label.py  get_ortho_file_id_with_query.py  merge_label_files.py  ortho_url_bounds_dict.txt
gis_data_folder/windows-cli/: extract_info_windows.py  upload_ortho_data_sqlalchemy_windows.py  url_finder_windows.py
linux-cli/: extract_info.py
ml_folder/windows-cli/: extract_info_windows.py  upload_label_data_sqlalchemy_windows.py  url_finder_windows.py
postgres_cli/query_tools/: automatic_query.py
postgres_cli/query_tools/configs/: classification_problem_config.py  database.ini
postgres_cli/query_tools/utils/: queries_file.py
postgres_cli/upload_from_NAS_into_database/Utils/: delete_existed_labels.py  determine_center_or_class.py  (+6 more)
postgres_cli/upload_geoJson_file/: count_number_of_rows.py  extract_info.py  find_ortho_of_the_label.py  get_ortho_file_id_with_query.py  upload_geoJson_file.py
postgres_cli/upload_one_file/: upload_one_file.py
postgres_cli/upload_ortho_file/: upload_ortho_file.py
test/: data.py  test.py  test2.py
upload_geoJson_file/: count_number_of_rows.py  upload_geoJson_file.py
windows-cli/: upload_label_data_sqlalchemy_windows.py
(+37 files in other folders)
