[tool.poetry]
name = "postgres-cli"
version = "0.1.0"
description = "Postgres CLI, upload data into database"
authors = ["hasandemirkiran <43812957+hasandemirkiran@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Fiona = "1.8.20"
GeoAlchemy2 = "0.9.4"
geojson = "2.5.0"
geopandas = "0.6.2"
numpy = "1.21.3"
pandas = "1.3.4"
pyproj = "3.2.1"
rasterio = "1.2.10"
Shapely = "1.7.1"
shortuuid = "1.0.1"
SQLAlchemy = "1.4.25"
psycopg2-binary = "^2.9.2"
PyYAML = "^6.0"


[tool.poetry.dev-dependencies]
black = "^21.11b1"

[tool.poetry.scripts]
upload_file = 'postgres_cli.upload_one_file.upload_one_file:main_upload_file'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
